iac/1.manifests/monitoring/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jaeger.fredric.playground.cld
    secretName: jaeger.fredric.playground.cld-tls
  rules:
  - host: jaeger.fredric.playground.cld
    http:
      paths:
      - path: /
        backend:
          service:
            name: jaeger-query
            port: 
              number: 16686
        pathType: Prefix
